src/main/default/objects/Catalog_Item__c/Catalog_Item__c.object-meta.xml
<CustomObject>
    <description>A master catalog item</description>
    <label>Catalog Item</label>
    <nameField>
        <label>Item Code</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Contact_00Ni0000007nL5vEAE</fullName>
        <active>true</active>
        <field>Contact.Catalog_Item__c</field>
        <filterItems>
            <field>Catalog_Item__c.Ticket_Item_Record_Type__c</field>
            <operation>contains</operation>
            <value>Labor</value>
        </filterItems>
        <filterItems>
            <field>Catalog_Item__c.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Job Title from Catalog</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wFirEAE_00Ni000000ApFj5EAF</fullName>
        <active>true</active>
        <field>Equipment__c.Catalog_Item__c</field>
        <filterItems>
            <field>Catalog_Item__c.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Equipment_Catalog Item</name>
    </namedFilters>
    <pluralLabel>Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>