src/main/default/objects/Catalog_Item__c/fields/Breadcrumb__c.field-meta.xml
<CustomField>
    <fullName>Breadcrumb__c</fullName>
    <inlineHelpText>Unique identifier used to categorize the item in catalog item lists.</inlineHelpText>
    <label>Breadcrumb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>