src/main/default/objects/Catalog_Item__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Classification to which the item belongs.</inlineHelpText>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Catalog Items</relationshipLabel>
    <relationshipName>Catalog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>