src/main/default/objects/Catalog_Item__c/fields/COGS_Account__c.field-meta.xml
<CustomField>
    <fullName>COGS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COGS Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CoA__c.Type__c</field>
            <operation>equals</operation>
            <value>COGS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CoA__c</referenceTo>
    <relationshipLabel>Catalog Items (COGS Account)</relationshipLabel>
    <relationshipName>COGS_Account_Catalog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>