src/main/default/objects/Catalog_Item__c/fields/Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Name_Unique__c</fullName>
    <description>This is only used to guarantee uniqueness of the SFDC standard object field Name (Item Code).  It never needs to be shown to the user.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the item.</inlineHelpText>
    <label>Name Unique</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>