src/main/default/objects/Catalog_Item__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to order the items in the catalog in something other than alphabetical order.</description>
    <inlineHelpText>Number used to determine the order in which the item displays in catalog item lists.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>