src/main/default/objects/Catalog_Item__c/fields/Ticket_Item_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Item_Record_Type__c</fullName>
    <description>This is the record type that will be used when a user creates a ticket item from this catalog item.</description>
    <inlineHelpText>Record type used for the item when added to a ticket.</inlineHelpText>
    <label>Ticket Item Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
                <default>true</default>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>