src/main/default/objects/Catalog_Item__c/fields/Track_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Track_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users can add the catalog item to a warehouse to track the item's inventory levels.</inlineHelpText>
    <label>Track Inventory</label>
    <type>Checkbox</type>
</CustomField>