src/main/default/objects/Catalog_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <inlineHelpText>Unit of measurement used for the item.</inlineHelpText>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>