src/main/default/objects/Catalog_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticket_Item_Record_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Breadcrumb__c</columns>
    <columns>UOM__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>