src/main/default/objects/Catalog_Item__c/listViews/Labor.listView-meta.xml
<ListView>
    <fullName>Labor</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Breadcrumb__c</columns>
    <columns>UOM__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ticket_Item_Record_Type__c</field>
        <operation>contains</operation>
        <value>Labor</value>
    </filters>
    <label>Labor</label>
    <language>en_US</language>
</ListView>